--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
 
       <div id="step-done" style="display:none">
         <h3>Done ✅</h3>
-        <p class="muted">You have completed the demo flow.</p>
+        <p class="muted">You have completed the flow.</p>
       </div>
       
       <div id="message" class="muted" style="margin-top:12px"></div>
@@ -45,3 +45,4 @@
 
     <script src="/app.js"></script>
   </body>
+
